2007-01-16  Akim Demaille  <akim@lrde.epita.fr>

	Add missing ;.
	* src/parser/bison/ugrammar.y: here.
	Newer Bisons no longer add this default semicolon.

2007-01-16  Jean-Christophe Baillie  <baillie@gostai.com>

	The bug was an uninitialized attribute of UParser in the constructor.

	fix ticket #113 
	* src/parser/uparser.cc: add init of commandTree to 0.
	* src/uconnection.cc: remove Tsuna temporary fix.

2007-01-14  Jean-Christophe Baillie  <baillie@gostai.com>

	update externals 

2007-01-14  Akim Demaille  <akim.demaille@free.fr>

	Catch up with UValue::Type.
	* src/uobject.cc, src/uvalue.cc, src/uvar.cc: Prepend UValue::
	where needed.

2007-01-14  Jean-Christophe Baillie  <baillie@gostai.com>

	Kernel side of the API Change made to UObject had to be fixed.

	revert UObject API change. 
	* src/uvalue.cc: done.

2007-01-14  Jean-Christophe Baillie  <baillie@gostai.com>

	update uobject externals to r363

2007-01-12  Akim Demaille  <akim@lrde.epita.fr>

	Update uobject
	To get Matthieu's fix on scanf use.

2007-01-12  Akim Demaille  <akim.demaille@free.fr>

	cpp fix
	* src/ucommand.cc: Fix an #undef.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	-Werror
	* configure.ac: Pass it.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Shorten scopes, fix warnings
	* src/uvalue.cc (UValue::copy): Make it clear which missing
	cases are valid (e.g., DATA_VOID), and which are to reject.
	Possibly some cases are missing, and will have to be added,
	but the test suite passes.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	renaming
	(This is to split the following patch.)
	* src/uvalue.cc: ret -> res.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Fix warnings
	* src/uvariable.cc: Die on impossible switch cases.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Update uobject
	* src/uvalue.cc: Adjust.

2007-01-11  Matthieu Nottale  <nottale@gostai.com>

	Add missing variable initialisation
	* src/parser/uparser.cc: Initialise filename_ in ctor.
