@@ -1,3 +1,10 @@
+2007-01-17  Matthieu Nottale  <nottale@gostai.com>
+
+	Fix a bug when printing strings containing % in the ghostconnection and a potential send bug in userver
+	* src/ughostconnection.cc: Do not pass string to print in the format field. pass ("%s", str) instead.
+	* src/userver.cc: Add missing call to va_end.
+	* src/userver.hh: Rename overloaded send(va_args) to vsend as the wrong one might be called.
+
 2007-01-16  Akim Demaille  <akim@lrde.epita.fr>
 
 	Add missing ;.
